# pushmate

./: COMMANDS.md  README.md  out.txt  pyproject.toml
.github/workflows/: publish.yml
gaid/: commits.py  config.py  git.py  github.py  llm_client.py  main.py  pull_requests.py
git_ai/: commits.py  config.py  llm_client.py  main.py
pushmate/: commits.py  git.py  github.py  main.py  messages.py  pull_requests.py  utils.py
pushmate/clients/: git.py  github.py  llm_client.py
pushmate/commands/: commit.py  issue.py  pr.py
