[tool.poetry]
name = "git-ai"
version = "0.1.0"
description = ""
authors = ["Brennen Ho <git-ai@brennen.dev>"]
readme = "README.md"

[tool.poetry.scripts]
git-ai = "git_ai.main:app"

[tool.poetry.dependencies]
python = "^3.12"
typer = {extras = ["all"], version = "^0.12.3"}
pyyaml = "^6.0.1"
openai = "^1.35.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
